--- a/src/css/main.css
+++ b/src/css/main.css
@@ -38,6 +38,54 @@ p {
   display: flex;
 }
 
+.dropDown {
+  position: relative;
+}
+
+.dropDown_items {
+  visibility: hidden;
+  opacity: 0;
+  transition: 1s;
+  position: absolute;
+  width: 180px;
+  height: 150px;
+  background-color: black;
+  color: white;
+  padding: 10px 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.main_header_nav .main_nav_items {
+  display: flex;
+  list-style: none;
+  gap: 30px;
+}
+.main_header_nav .main_nav_items li {
+  position: relative;
+  padding-bottom: 5px;
+}
+.main_header_nav .main_nav_items li::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  background-color: black;
+}
+.main_header_nav .main_nav_items li:hover::after {
+  width: 100%;
+}
+.main_header_nav .main_nav_items li.active::after {
+  width: 100%;
+}
+
+.dropDown:hover .dropDown_items {
+  visibility: visible;
+  opacity: 1;
+}
+
 .header_upper_search {
   display: flex;
 }
@@ -154,7 +202,7 @@ p {
   background-color: white;
   width: 11rem;
   height: 3.2rem;
-  border-radius: 15px;
+  border-radius: 25px;
 }
 
 .arrow_left,
@@ -174,24 +222,39 @@ p {
 
 .section_commerce {
   width: 100%;
-  height: 100vh;
   padding-top: 20px;
 }
 
 .flex_one, .flex_two, .flex_three {
   display: flex;
   flex-direction: column;
-  row-gap: 30px;
+  gap: 30px;
 }
-
 .box, .box2 {
   width: 400px;
+  overflow: hidden;
+  position: relative;
+}
+@media (max-width: 992px) {
+  .box, .box2 {
+    width: 350px;
+  }
+}
+@media (max-width: 360px) {
+  .box, .box2 {
+    width: 250px;
+  }
 }
 
-.flex_down img, .flex_up img {
+.box img, .box2 img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: transform 0.5s ease;
+}
+
+.box:hover img, .box2:hover img {
+  transform: scale(1.1);
 }
 
 .watch {
@@ -201,6 +264,23 @@ p {
 .shoes {
   display: flex;
   align-self: flex-end;
+}
+
+.items {
+  width: 120px;
+  height: 50px;
+  background-color: white;
+  position: absolute;
+  bottom: 10%;
+  left: 32%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.items:hover {
+  background-color: orangered;
+  transition: 1s;
 }
 
 .sighUp {
@@ -233,15 +313,451 @@ p {
 
 .sighUp_btn {
   width: 50%;
-  height: 10%;
+  height: 15%;
   background-color: black;
   color: white;
-  border-radius: 15px;
+  border-radius: 25px;
   margin-top: 30px;
+}
+
+.sighUp_btn:hover {
+  background-color: orangered;
+  transition: 1s;
 }
 
 .section_flex {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+
+.product_card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.products {
+  width: 100%;
+  margin-top: 300px;
+}
+
+.product_card:hover .overlay {
+  visibility: visible;
+  opacity: 1;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.319);
+  left: 0;
+  top: 0;
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 2;
+  transition: 1s;
+}
+
+.product_card {
+  position: relative;
+}
+
+.product_card:hover .product_btn {
+  visibility: visible;
+  opacity: 1;
+  bottom: 4%;
+}
+
+.product_btn {
+  width: 100px;
+  height: 50px;
+  border-radius: 17px;
+  background-color: black;
+  color: white;
+  position: absolute;
+  bottom: 0%;
+  right: 35%;
+  visibility: hidden;
+  opacity: 0;
+  transition: 1s ease;
+}
+
+.product_now {
+  position: absolute;
+  top: 3%;
+  left: 5%;
+  width: 50px;
+  height: 27px;
+  background-color: aqua;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.products h1 {
+  text-align: center;
+  font-size: 3rem;
+}
+
+.products_flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product_cards {
+  display: flex;
+  gap: 25px;
+}
+@media (max-width: 576px) {
+  .product_cards {
+    flex-direction: column;
+  }
+}
+
+.product_arrow_left {
+  width: 80px;
+  height: 60px;
+  color: rgba(255, 255, 255, 0.618);
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  font-size: 50px;
+}
+@media (max-width: 576px) {
+  .product_arrow_left {
+    font-size: 20px;
+  }
+}
+
+.product_arrow_right {
+  width: 80px;
+  height: 60px;
+  color: rgba(255, 255, 255, 0.622);
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  font-size: 50px;
+}
+@media (max-width: 576px) {
+  .product_arrow_right {
+    font-size: 20px;
+  }
+}
+
+.new_look {
+  width: 100%;
+  margin-top: 3%;
+}
+
+.new_look_flex {
+  display: flex;
+  justify-content: space-around;
+}
+@media (max-width: 768px) {
+  .new_look_flex {
+    flex-direction: column;
+  }
+}
+
+.new_look_item_other img {
+  transition: 1s;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.new_look_item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 1s;
+}
+@media (max-width: 992px) {
+  .new_look_item img {
+    width: 90%;
+  }
+}
+
+.new_look_item {
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.new_look_item_other {
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.new_look_text {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  color: white;
+}
+
+.new_look_text_other {
+  position: absolute;
+  width: 70%;
+  height: 50%;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  color: white;
+}
+
+.new_look_text_other p {
+  font-size: 1.3rem;
+  color: white;
+  font-weight: 400;
+  color: black;
+}
+@media (max-width: 992px) {
+  .new_look_text_other p {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 768px) {
+  .new_look_text_other p {
+    font-size: 1rem;
+  }
+}
+
+.new_look_text h1 {
+  font-size: 3.8rem;
+  letter-spacing: 4px;
+  font-weight: 600;
+}
+
+.new_look_text p {
+  font-size: 1.7rem;
+}
+
+.new_look_text h3 {
+  font-size: 2.5rem;
+}
+
+.countdown_flex {
+  display: flex;
+  gap: 10px;
+}
+
+.countdown_flex div {
+  width: 78px;
+  height: 55px;
+  padding: 8px 9px;
+  border: 1px solid gray;
+}
+
+.new_look_text p {
+  color: white;
+}
+
+.new_look_item:hover img {
+  transform: scale(1.2);
+}
+
+.new_look_item_other:hover img {
+  transform: scale(1.2);
+}
+
+.our_blog {
+  width: 100%;
+}
+
+.products h1 {
+  text-align: center;
+  font-size: 3rem;
+}
+
+.our_blog_h1 {
+  text-align: center;
+  font-size: 3rem;
+}
+
+.our_blog_flex {
+  display: flex;
+  justify-content: space-around;
+  gap: 28px;
+}
+@media (max-width: 992px) {
+  .our_blog_flex {
+    flex-direction: column;
+  }
+}
+
+.our_blog_item {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.our_blog_item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 1s;
+}
+
+.our_blog_item:hover img {
+  transform: scale(1.1);
+}
+
+.follow {
+  width: 100%;
+  margin-top: 10%;
+}
+
+.follow h1 {
+  text-align: center;
+  font-size: 2.2rem;
+  margin-bottom: 3%;
+}
+
+.follow_flex {
+  display: flex;
+}
+
+.follow_items img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.follow_items {
+  position: relative;
+}
+
+.follow_items_text p, span {
+  color: white;
+}
+
+.follow_items_text {
+  padding: 20px 20px;
+  color: white;
+  z-index: 5;
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  transition: 1s ease;
+  bottom: 0;
+}
+
+.follow_items:hover .overlay_2 {
+  visibility: visible;
+  opacity: 1;
+}
+
+.follow_items:hover .follow_items_text {
+  visibility: visible;
+  opacity: 1;
+  bottom: 32%;
+}
+
+.overlay_2 {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.559);
+  left: 0;
+  top: 0;
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 2;
+  transition: 1s;
+}
+
+.follow_text {
+  display: flex;
+  justify-content: space-between;
+  height: 25vh;
+  align-items: center;
+  bottom: 0;
+}
+
+.line {
+  height: 80px;
+  width: 1px;
+  background-color: gray;
+}
+
+.footer {
+  width: 100%;
+  margin-top: 20px;
+  background-color: #F0F0F0;
+  padding-top: 40px;
+}
+
+.footer_flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer_flex_item_first {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.footer_flex_item {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+@media (max-width: 992px) {
+  .footer_flex_item {
+    display: none;
+  }
+}
+
+.footer_icons {
+  display: flex;
+  gap: 30px;
+}
+
+.footer_flex_item, .footer_flex_item_first h3 {
+  font-weight: 700;
+}
+
+.footer_btn {
+  width: 50%;
+  height: 15%;
+  background-color: black;
+  color: white;
+  border-radius: 25px;
+  margin-top: 30px;
+}
+
+.footer_payment {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 9%;
+  gap: 20px;
+}
+
+.fa-bars {
+  display: none;
+}
+@media (max-width: 992px) {
+  .fa-bars {
+    display: block;
+  }
 }/*# sourceMappingURL=main.css.map */
