--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,11 @@
 @import './components/header';  
 @import './components/main';
 @import './components/commerce';
+@import './components/featured';
+@import './components/newlook';
+@import './components/ourblog';
+@import './components/follow';
+@import './components/footer';
 
 
 
