--- a/src/scss/utils/_mixin.scss
+++ b/src/scss/utils/_mixin.scss
@@ -12,6 +12,12 @@
         }
 
     }
+    @else if $breakpoint ==xsm {
+        @media (max-width: 360px) {
+            @content;
+        }
+
+    }
 
     @else if $breakpoint ==md {
         @media (max-width: 992px) {
